Bug 27327: Input::SetAttribute('value') now updates content model, r=buster